--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name=".IntroActivity"
             android:label="@string/app_name"/>
+        <activity android:name=".welcomeView"
+            android:theme="@android:style/Theme.NoTitleBar" />
     </application>
 
 </manifest>
